issues/case-base/objects/Case/fields/TestField10__c.field-meta.xml
<CustomField>
    <fullName>TestField10__c</fullName>
    <description></description>
    <label>Test Field 1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>