issues/case-base/objects/Case/fields/TestField1__c.field-meta.xml
<CustomField>
    <fullName>TestField1__c</fullName>
    <description></description>
    <label>Test Field 1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>