issues/case-base/objects/Case/fields/TestField2__c.field-meta.xml
<CustomField>
    <fullName>TestField2__c</fullName>
    <description></description>
    <label>Test Field 2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>